--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,10 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(BINDIR "${CMAKE_INSTALL_PREFIX}/bin")
 
 
-include_directories(/usr/local/include)
+include_directories(/usr/local/include
+                    /usr/local/include/jsoncpp)
 include_directories(/usr/local/include/lua53)
 link_directories(/usr/local/lib)
+link_directories(/usr/local/lib64)
 
 add_subdirectory(src)
